I started my project

--- a/gallery.html
+++ b/gallery.html
@@ -1,26 +1,28 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta charset="utf-8"/>
         <title> </title>
+        <meta charset="utf-8"/>
         <link rel="stylesheet" href="css/style.css" type="text/css" />
     </head>
     <body>
-        <div class="header">Name</div>
+        <div class="header">Marco Asensio</div>
         <div class=navbar>
-             <a href="#">Home</a>
-             <a href="#">About</a>
-             <a href="#">Gallery</a>
+             <a href="index.html">Home</a>
+             <a href="about.html">About</a>
+             <a href="gallery.html">Gallery</a>
+        </div>
+        
         </div>
         <div class="gallery">
             <div class="thumbnail">
-                <img class="thumbnail-image" src="">
+                <img class="thumbnail-image" src="https://scontent-lga3-1.xx.fbcdn.net/v/t1.0-9/42830083_1648093708629673_1313509940962263040_n.jpg?_nc_cat=105&oh=f00fbafffb426188d55bac7bc7973030&oe=5C618336">
             </div>
             <div class="thumbnail">
-                <img class="thumbnail-image" src="">
+                <img class="thumbnail-image" src="https://scontent-lga3-1.xx.fbcdn.net/v/t1.0-9/42186833_1636750859763958_6708490787501375488_n.jpg?_nc_cat=104&oh=918ecf55e6319692a0e86bbe61b07379&oe=5C5B77A8">
             </div>
             <div class="thumbnail">
-                <img class="thumbnail-image" src="">
+                <img class="thumbnail-image" src="https://scontent-lga3-1.xx.fbcdn.net/v/t1.0-9/42335861_1640985786007132_1847198462584553472_n.jpg?_nc_cat=105&oh=f2348c798b1bf8cfce7d9b90790f431d&oe=5C52E5FD">
             </div>
             <div class="thumbnail">
                 <img class="thumbnail-image" src="">
