--- a/gallery.html
+++ b/gallery.html
@@ -6,13 +6,12 @@
         <link rel="stylesheet" href="css/style.css" type="text/css" />
     </head>
     <body>
-        <div class="header">Marco Asensio</div>
         <div class=navbar>
              <a href="index.html">Home</a>
              <a href="about.html">About</a>
              <a href="gallery.html">Gallery</a>
-        </div>
-        
+    </div>
+    <div class="header">Marco Asensio</div>
         </div>
         <div class="gallery">
             <div class="thumbnail">
@@ -25,7 +24,7 @@
                 <img class="thumbnail-image" src="https://scontent-lga3-1.xx.fbcdn.net/v/t1.0-9/42335861_1640985786007132_1847198462584553472_n.jpg?_nc_cat=105&oh=f2348c798b1bf8cfce7d9b90790f431d&oe=5C52E5FD">
             </div>
             <div class="thumbnail">
-                <img class="thumbnail-image" src="">
+                <img class="thumbnail-image" src="https://scontent-lga3-1.xx.fbcdn.net/v/t1.0-9/44606630_1676674202438290_1040008858799439872_n.jpg?_nc_cat=104&_nc_ht=scontent-lga3-1.xx&oh=45616dcd8b17109bc38c7421798d4e00&oe=5C89D406">
             </div>
         </div>
         <div class="footer">
