--- a/index.html
+++ b/index.html
@@ -6,15 +6,15 @@
         <link rel="stylesheet" href="css/style.css" type="text/css" />
     </head>
     <body>
-        <div class="header">MARCO ASENSIO</div>
         <div class=navbar>
-             <a href="#">Home</a>
-             <a href="#">About</a>
-             <a href="#">Gallery</a>
+             <a href="index.html">Home</a>
+             <a href="about.html">About</a>
+             <a href="gallery.html">Gallery</a>
         </div>
+        <div class="header">Marco Asensio</div>
         <div class="main">
         </div>
-        <div class="content">
+        <div class="content"> 
         </div>
         <div class="footer">
             <div class="social">
